--- a/user/templates/users/dashboard.html
+++ b/user/templates/users/dashboard.html
@@ -6,8 +6,8 @@
 
 <body class="min-h-screen bg-cover bg-center"
 style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
-    <div class="w-full h-full flex justify-center  mt-20 ">
-        <div class="relative rounded overflow-hidden  w-1/2 h-fit  bg-gray-900 bg-opacity-50 shadow-lg">
+    <div class="w-full h-full flex justify-center  mt-10 ">
+        <div class="rounded overflow-hidden w-96 h-fit bg-gray-900 bg-opacity-70 shadow-lg justify-center items-center my-10">
             <div class="absolute inset-0 bg-gray-900 bg-opacity-50 filter blur-2xl h-full "></div>
             <div class="relative z-10 mt-10 text-center text-white">
                 <div class="mb-8 ">
