--- a/shop/templates/shop/show_product_province.html
+++ b/shop/templates/shop/show_product_province.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block content %}
-
 <div class="flex justify-around lg:mx-20">
     <div class="grid grid-cols-4 lg:grid-cols-3 ">
         <div class="mt-5">
@@ -16,28 +15,28 @@
             </select>
         </div>
         <div class="flex  mt-5">
-
-            <form action="{% url 'search' %}" method="post" class="flex max-w-sm">
+            <form action="{% url 'show_product_province' selected_province.id %}" method="post" class="flex max-w-sm">
                 {% csrf_token %}
                 <div class="flex ">
                     <input type="text" name="search" placeholder="Search..."
                         class="px-4 py-2 rounded-l-md focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent bg-green-100 w-20 h-10 lg:w-96 lg:h-10">
                     <button type="submit"
-                        class="bg-green-600 hover:bg-green-800 px-4 py-2 rounded-r-md text-white focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 focus:ring-offset-green-700 h-10"><i
-                        class="fa-solid fa-magnifying-glass"></i></button>
+                        class="bg-green-600 hover:bg-green-800 px-4 py-2 rounded-r-md text-white focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 focus:ring-offset-green-700 h-10">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
                 </div>
             </form>
-
         </div>
         <div class="flex lg:ml-20">
             <div class="flex justify-end ml-20 mt-5 mb-2 ">
                 <form action="{% url 'buy_product' %}">
                     <button type="submit"
-                        class="bg-blue-500 text-white mx-2 lg:px-5 lg:py-2 lg:w-32 w-10 h-10 rounded-lg lg:mr-8  text-sm block">ปล่อยเช่า</button>
+                        class="bg-blue-500 text-white mx-2 lg:px-5 lg:py-2 lg:w-32 w-10 h-10 rounded-lg lg:mr-8  text-sm block">
+                        ปล่อยเช่า
+                    </button>
                 </form>
             </div>
-
-            <div class=" flex justify-end  mt-5 mb-2">
+            <div class="flex justify-end  mt-5 mb-2">
                 <a href="{% url 'cart' %}">
                     <i class="fa-solid fa-cart-plus text-xl lg:text-3xl"></i>
                 </a>
@@ -63,7 +62,7 @@
         </a>
         <ul class="text-center flex justify-between lg:grid lg:grid-cols-1 p-2 ">
             {% for c in category %}
-            <li><a href="{% url 'product_category' c.id %}">{{ c.category_name}}</a></li>
+            <li><a href="{% url 'product_category' c.id %}">{{ c.category_name }}</a></li>
             {% endfor %}
         </ul>
     </div>
@@ -71,18 +70,15 @@
     <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 m-2 col-start-2 h-full ">
         {% for i in allproduct %}
         {% if i.quantity > 0 %}
-        <a class="hover:scale-105 transform transition duration-300 ease-in-out" href="{% url 'Showdetall_product' i.id %}">
-            <div class="border bg-green-100 rounded-lg product-box">
+        <a class="hover:scale-105 transform transition duration-300 ease-in-out {% if i.id in expired_products %}pointer-events-none{% endif %}"
+            href="{% if i.id not in expired_products %}{% url 'Showdetall_product' i.id %}{% endif %}">
+            <div class="border {% if i.id in expired_products %}bg-red-300{% else %}bg-green-200{% endif %} rounded-lg product-box">
                 {% if i.image %}
                 <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
                 {% endif %}
                 <div class="p-4 content">
                     <h5 class="text-lg font-semibold mb-2">
-                        {% if i.id %}
                         <div class="text-blue-500 truncate">{{ i.product_name }}</div>
-                        {% else %}
-                        <span class="text-red-500">No ID available for this product</span>
-                        {% endif %}
                     </h5>
                     <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
                     <p class="text-gray-800 truncate">สถานะอุปกรณ์: {{ i.product_status }}</p>
@@ -91,7 +87,6 @@
                 </div>
             </div>
         </a>
-        
         {% else %}
         <div class="border bg-red-300 rounded-lg product-box">
             {% if i.image %}
@@ -99,11 +94,7 @@
             {% endif %}
             <div class="p-4 content">
                 <h5 class="text-lg font-semibold mb-2">
-                    {% if i.id %}
                     <div class="text-blue-500 truncate">{{ i.product_name }}</div>
-                    {% else %}
-                    <span class="text-red-500">No ID available for this product</span>
-                    {% endif %}
                 </h5>
                 <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
                 <p class="text-gray-800 truncate">สถานะอุปกรณ์: หมด</p>
@@ -111,13 +102,9 @@
                 <p class="text-gray-800 truncate">จำนวน: {{ i.quantity }} ชิ้น</p>
             </div>
         </div>
-
-
         {% endif %}
         {% endfor %}
     </div>
-
 </div>
-
 
 {% endblock %}
