--- a/user/templates/users/dashboard.html
+++ b/user/templates/users/dashboard.html
@@ -5,9 +5,9 @@
 
 
 <body class="min-h-screen bg-cover bg-center"
-    style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
-    <div class="w-full h-full flex justify-center  mt-20 ">
-        <div class="relative rounded overflow-hidden  w-1/2 h-fit  bg-gray-900 bg-opacity-50 shadow-lg">
+style="background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;">
+    <div class="flex items-center justify-center min-h-screen bg-gray-900 bg-opacity-50">
+        <div class="relative w-full max-w-md p-8 bg-gray-800 bg-opacity-75 rounded-lg shadow-lg ">
             <div class="absolute inset-0 bg-gray-900 bg-opacity-50 filter blur-2xl h-full "></div>
             <div class="relative z-10 mt-10 text-center text-white">
                 <div class="mb-8 ">
