--- a/main/templates/main/tobar2.html
+++ b/main/templates/main/tobar2.html
@@ -17,30 +17,45 @@
 
   
 
-  <header class="items-center py-2 px-6  sm:flex">
-    <div class="w-1/2"></div>
-    <div x-data="{ isOpen: false }" class="relative flex justify-end">
-        <button @click="isOpen = !isOpen"
-            class="relative z-20 w-12 h-12 rounded-full overflow-hidden border-4 border-white hover:border-gray-300 focus:border-gray-300 focus:outline-none">
-            <img src="https://www.iconpacks.net/icons/2/free-user-icon-3297-thumb.png" alt="User Icon">
-        </button>
-        <button x-show="isOpen" @click="isOpen = false"
-            class="h-full w-full fixed inset-0 cursor-default z-10"></button>
-
-        <div x-show="isOpen" class="absolute right-0 w-32 bg-white rounded-lg shadow-lg py-2 mt-16 z-20">
-            {% if user.is_authenticated %}
-            <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link hover:bg-gray-200">{{ user.username }}</a>
-            <a href="/logout/" class="block px-4 py-2 account-link hover:bg-gray-200">ออกจากระบบ</a>
-            {% else %}
-            <a href="{% url 'login' %}" class="block px-4 py-2 account-link hover:bg-gray-200">เข้าสู่ระบบ</a>
-            <a href="{% url 'register' %}" class="block px-4 py-2 account-link hover:bg-gray-200">สมัครสมาชิก</a>
-            {% endif %}
-            <a href="{% url 'home' %}" class="block px-4 py-2 account-link hover:bg-gray-200">หน้าแรก</a>
-            <a href="{% url 'help' %}" class="block px-4 py-2 account-link hover:bg-gray-200">ช่วยเหลือ</a>
-            <a href="{% url 'about' %}" class="block px-4 py-2 account-link hover:bg-gray-200">เกี่ยวกับ</a>
-        </div>
-    </div>
-</header>
+    <header class="items-center py-2 px-6 sm:flex">
+      <!-- เมนูสำหรับหน้าจอขนาดใหญ่ -->
+      <div class="hidden lg:flex space-x-4">
+          {% if user.is_authenticated %}
+          <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link hover:bg-gray-200">{{ user.username }}</a>
+          <a href="/logout/" class="block px-4 py-2 account-link hover:bg-gray-200">ออกจากระบบ</a>
+          {% else %}
+          <a href="{% url 'login' %}" class="block px-4 py-2 account-link hover:bg-gray-200">เข้าสู่ระบบ</a>
+          <a href="{% url 'register' %}" class="block px-4 py-2 account-link hover:bg-gray-200">สมัครสมาชิก</a>
+          {% endif %}
+          <a href="{% url 'home' %}" class="block px-4 py-2 account-link hover:bg-gray-200">หน้าแรก</a>
+          <a href="{% url 'help' %}" class="block px-4 py-2 account-link hover:bg-gray-200">ช่วยเหลือ</a>
+          <a href="{% url 'about' %}" class="block px-4 py-2 account-link hover:bg-gray-200">เกี่ยวกับ</a>
+      </div>
+  
+      <!-- เมนูสำหรับหน้าจอขนาดเล็ก -->
+      <div x-data="{ isOpen: false }" class="relative flex justify-end lg:hidden">
+          <button @click="isOpen = !isOpen"
+              class="relative z-20 w-12 h-12 rounded-full overflow-hidden border-4 border-white hover:border-gray-300 focus:border-gray-300 focus:outline-none">
+              <img src="https://www.iconpacks.net/icons/2/free-user-icon-3297-thumb.png" alt="User Icon">
+          </button>
+          <button x-show="isOpen" @click="isOpen = false"
+              class="h-full w-full fixed inset-0 cursor-default z-10"></button>
+  
+          <div x-show="isOpen" class="absolute right-0 w-32 bg-white rounded-lg shadow-lg py-2 mt-16 z-20">
+              {% if user.is_authenticated %}
+              <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link hover:bg-gray-200">{{ user.username }}</a>
+              <a href="/logout/" class="block px-4 py-2 account-link hover:bg-gray-200">ออกจากระบบ</a>
+              {% else %}
+              <a href="{% url 'login' %}" class="block px-4 py-2 account-link hover:bg-gray-200">เข้าสู่ระบบ</a>
+              <a href="{% url 'register' %}" class="block px-4 py-2 account-link hover:bg-gray-200">สมัครสมาชิก</a>
+              {% endif %}
+              <a href="{% url 'home' %}" class="block px-4 py-2 account-link hover:bg-gray-200">หน้าแรก</a>
+              <a href="{% url 'help' %}" class="block px-4 py-2 account-link hover:bg-gray-200">ช่วยเหลือ</a>
+              <a href="{% url 'about' %}" class="block px-4 py-2 account-link hover:bg-gray-200">เกี่ยวกับ</a>
+          </div>
+      </div>
+  </header>
+  
 
 
   
