--- a/shop/templates/shop/show_product_province.html
+++ b/shop/templates/shop/show_product_province.html
@@ -3,8 +3,16 @@
 
 {% block content %}
 <div class="flex justify-around lg:mx-20">
-    <div class="grid grid-cols-4 lg:grid-cols-3 ">
-        <div class="mt-5">
+    <div class="grid grid-cols-4 lg:grid-cols-3">
+        <div class="mt-5 flex">
+            <select id="category_name" name="category_name"
+                class="bg-gray-50 border text-gray-900 text-sm rounded-lg block px-2 mx-4 lg:py-2 dark:bg-gray-100 dark:text-black w-20 lg:w-52"
+                onchange="navigateToCategory()">
+                <option selected>เลือกหมวดหมู่</option>
+                {% for c in category %}
+                <option value="{% url 'product_category' c.id %}">{{ c.category_name }}</option>
+                {% endfor %}
+            </select>
             <select id="province_name" name="province_name"
                 class="bg-gray-50 border text-gray-900 text-sm rounded-lg block px-2 mx-4 lg:py-2 dark:bg-gray-100 dark:text-black w-20 lg:w-52"
                 onchange="navigateToProvince()">
@@ -14,14 +22,10 @@
                 {% endfor %}
             </select>
         </div>
-        <div class="flex  mt-5">
-<<<<<<< HEAD
-            <form action="{% url 'show_product_province' selected_province.id %}" method="post" class="flex max-w-sm">
-=======
+        <div class="flex mt-5">
             <form action="{% url 'search' %}" method="post" class="flex max-w-sm">
->>>>>>> 742f23d1b34de3b2ada90a0fdfcf49dc51e7c2be
                 {% csrf_token %}
-                <div class="flex ">
+                <div class="flex">
                     <input type="text" name="search" placeholder="Search..."
                         class="px-4 py-2 rounded-l-md focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent bg-green-100 w-20 h-10 lg:w-96 lg:h-10">
                     <button type="submit"
@@ -32,15 +36,15 @@
             </form>
         </div>
         <div class="flex lg:ml-20">
-            <div class="flex justify-end ml-20 mt-5 mb-2 ">
+            <div class="flex justify-end ml-20 mt-5 mb-2">
                 <form action="{% url 'buy_product' %}">
                     <button type="submit"
-                        class="bg-blue-500 text-white mx-2 lg:px-5 lg:py-2 lg:w-32 w-10 h-10 rounded-lg lg:mr-8  text-sm block">
+                        class="bg-blue-500 text-white mx-2 lg:px-5 lg:py-2 lg:w-32 w-10 h-10 rounded-lg lg:mr-8 text-sm block">
                         ปล่อยเช่า
                     </button>
                 </form>
             </div>
-            <div class="flex justify-end  mt-5 mb-2">
+            <div class="flex justify-end mt-5 mb-2">
                 <a href="{% url 'cart' %}">
                     <i class="fa-solid fa-cart-plus text-xl lg:text-3xl"></i>
                 </a>
@@ -59,19 +63,17 @@
     }
 </script>
 
-<div class="lg:flex">
-    <div class="w-full  bg-gray-400 lg:min-w-48 lg:max-w-48 lg:min-h-screen ">
-        <a href="{% url 'show_product' %}">
-            <p class="text-lg font-semibold mb-4 text-center">หมวดหมู่</p>
-        </a>
-        <ul class="text-center flex justify-between lg:grid lg:grid-cols-1 p-2 ">
-            {% for c in category %}
-            <li><a href="{% url 'product_category' c.id %}">{{ c.category_name }}</a></li>
-            {% endfor %}
-        </ul>
-    </div>
+<script>
+    function navigateToCategory() {
+        var select = document.getElementById('category_name');
+        var url = select.options[select.selectedIndex].value;
+        if (url) {
+            window.location.href = url;
+        }
+    }
+</script>
 
-    <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 m-2 col-start-2 h-full ">
+<div class="grid grid-cols-2 lg:grid-cols-8 gap-3 m-2 col-start-2 h-full py-10 px-10">
         {% for i in allproduct %}
         {% if i.quantity > 0 %}
         <a class="hover:scale-105 transform transition duration-300 ease-in-out {% if i.id in expired_products %}pointer-events-none{% endif %}"
@@ -111,8 +113,4 @@
     </div>
 </div>
 
-<<<<<<< HEAD
 {% endblock %}
-=======
-{% endblock %}
->>>>>>> 742f23d1b34de3b2ada90a0fdfcf49dc51e7c2be
