--- a/shop/templates/shop/show_product_province.html
+++ b/shop/templates/shop/show_product_province.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {% block content %}
-<div class="flex flex-wrap justify-around lg:mx-20 ">
+<div class="flex flex-wrap justify-around lg:mx-20">
     <div class="flex items-center space-x-4 mt-5">
-        <div class="lg:flex ">
+        <div class="lg:flex">
             <div class="mb-4 lg:mb-0 lg:mx-4">
                 <select id="category_name" name="category_name"
                     class="bg-gray-50 border text-gray-900 text-sm rounded-lg block px-2 mx-4 lg:mx-0 lg:py-2 dark:bg-gray-100 dark:text-black w-20 lg:w-52"
@@ -15,8 +15,8 @@
                     {% endfor %}
                 </select>
             </div>
-        
-            <div class=" lg:mb-0">
+
+            <div class="lg:mb-0">
                 <select id="province_name" name="province_name"
                     class="bg-gray-50 border text-gray-900 text-sm rounded-lg block px-2 mx-4 lg:mx-0 lg:py-2 dark:bg-gray-100 dark:text-black w-20 lg:w-52"
                     onchange="navigateToProvince()">
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="flex">
-            <form action="{% url 'search' %}" method="post" class="flex max-w-sm w-full lg:w-auto">
+            <form action="{% url 'show_product_province' selected_province.id %}" method="post" class="flex max-w-sm w-full lg:w-auto">
                 {% csrf_token %}
                 <div class="flex w-full">
                     <input type="text" name="search" placeholder="Search..."
@@ -40,8 +40,8 @@
                 </div>
             </form>
         </div>
-        <div class="flex items-center space-x-4 lg:ml-20  lg:mt-0">
-            <div class="flex  lg:justify-start mb-2 lg:mb-0">
+        <div class="flex items-center space-x-4 lg:ml-20 lg:mt-0">
+            <div class="flex lg:justify-start mb-2 lg:mb-0">
                 <form action="{% url 'buy_product' %}">
                     <button type="submit"
                         class="bg-blue-500 text-white mx-2 lg:px-5 lg:py-2 lg:w-32 w-10 h-10 rounded-lg lg:mr-8 text-sm block">
@@ -49,14 +49,13 @@
                     </button>
                 </form>
             </div>
-            <div class="flex  lg:justify-start pr-10">
+            <div class="flex lg:justify-start pr-10">
                 <a href="{% url 'cart' %}">
                     <i class="fa-solid fa-cart-plus text-xl lg:text-3xl"></i>
                 </a>
             </div>
         </div>
     </div>
-
 </div>
 
 <script>
@@ -67,9 +66,7 @@
             window.location.href = url;
         }
     }
-</script>
 
-<script>
     function navigateToCategory() {
         var select = document.getElementById('category_name');
         var url = select.options[select.selectedIndex].value;
@@ -80,27 +77,11 @@
 </script>
 
 <div class="grid grid-cols-2 lg:grid-cols-8 gap-3 m-2 col-start-2 h-full lg:py-10 lg:px-10">
-        {% for i in allproduct %}
-        {% if i.quantity > 0 %}
-        <a class="hover:scale-105 transform transition duration-300 ease-in-out {% if i.id in expired_products %}pointer-events-none{% endif %}"
-            href="{% if i.id not in expired_products %}{% url 'Showdetall_product' i.id %}{% endif %}">
-            <div class="border {% if i.id in expired_products %}bg-red-300{% else %}bg-green-200{% endif %} rounded-lg product-box">
-                {% if i.image %}
-                <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
-                {% endif %}
-                <div class="p-4 content">
-                    <h5 class="text-lg font-semibold mb-2">
-                        <div class="text-blue-500 truncate">{{ i.product_name }}</div>
-                    </h5>
-                    <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
-                    <p class="text-gray-800 truncate">สถานะอุปกรณ์: {{ i.product_status }}</p>
-                    <p class="text-gray-800 truncate">ที่อยู่อุปกรณ์: {{ i.product_location }} {{ i.province }}</p>
-                    <p class="text-gray-800 truncate">จำนวน: {{ i.quantity }} ชิ้น</p>
-                </div>
-            </div>
-        </a>
-        {% else %}
-        <div class="border bg-red-300 rounded-lg product-box">
+    {% for i in allproduct %}
+    {% if i.quantity > 0 %}
+    <a class="hover:scale-105 transform transition duration-300 ease-in-out {% if i.id in expired_products %}pointer-events-none{% endif %}"
+        href="{% if i.id not in expired_products %}{% url 'Showdetall_product' i.id %}{% endif %}">
+        <div class="border {% if i.id in expired_products %}bg-red-300{% else %}bg-green-200{% endif %} rounded-lg product-box">
             {% if i.image %}
             <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
             {% endif %}
@@ -109,14 +90,29 @@
                     <div class="text-blue-500 truncate">{{ i.product_name }}</div>
                 </h5>
                 <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
-                <p class="text-gray-800 truncate">สถานะอุปกรณ์: หมด</p>
+                <p class="text-gray-800 truncate">สถานะอุปกรณ์: {{ i.product_status }}</p>
                 <p class="text-gray-800 truncate">ที่อยู่อุปกรณ์: {{ i.product_location }} {{ i.province }}</p>
                 <p class="text-gray-800 truncate">จำนวน: {{ i.quantity }} ชิ้น</p>
             </div>
         </div>
+    </a>
+    {% else %}
+    <div class="border bg-red-300 rounded-lg product-box">
+        {% if i.image %}
+        <img src="{{ i.image.url }}" alt="Image" class="w-full h-64 object-cover">
         {% endif %}
-        {% endfor %}
+        <div class="p-4 content">
+            <h5 class="text-lg font-semibold mb-2">
+                <div class="text-blue-500 truncate">{{ i.product_name }}</div>
+            </h5>
+            <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
+            <p class="text-gray-800 truncate">สถานะอุปกรณ์: หมด</p>
+            <p class="text-gray-800 truncate">ที่อยู่อุปกรณ์: {{ i.product_location }} {{ i.province }}</p>
+            <p class="text-gray-800 truncate">จำนวน: {{ i.quantity }} ชิ้น</p>
+        </div>
     </div>
+    {% endif %}
+    {% endfor %}
 </div>
 
 {% endblock %}
