--- a/main/templates/main/tobar2.html
+++ b/main/templates/main/tobar2.html
@@ -21,15 +21,15 @@
       <!-- เมนูสำหรับหน้าจอขนาดใหญ่ -->
       <div class="hidden lg:flex space-x-4">
           {% if user.is_authenticated %}
-          <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link hover:bg-green-600">{{ user.username }}</a>
-          <a href="/logout/" class="block px-4 py-2 account-link hover:bg-green-600">ออกจากระบบ</a>
+          <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white ">{{ user.username }}</a>
+          <a href="/logout/" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">ออกจากระบบ</a>
           {% else %}
-          <a href="{% url 'login' %}" class="block px-4 py-2 account-link hover:bg-green-600">เข้าสู่ระบบ</a>
-          <a href="{% url 'register' %}" class="block px-4 py-2 account-link hover:bg-green-600">สมัครสมาชิก</a>
+          <a href="{% url 'login' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">เข้าสู่ระบบ</a>
+          <a href="{% url 'register' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">สมัครสมาชิก</a>
           {% endif %}
-          <a href="{% url 'home' %}" class="block px-4 py-2 account-link hover:bg-green-600">หน้าแรก</a>
-          <a href="{% url 'help' %}" class="block px-4 py-2 account-link hover:bg-green-600">ช่วยเหลือ</a>
-          <a href="{% url 'about' %}" class="block px-4 py-2 account-link hover:bg-green-600">เกี่ยวกับ</a>
+          <a href="{% url 'home' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">หน้าแรก</a>
+          <a href="{% url 'help' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">ช่วยเหลือ</a>
+          <a href="{% url 'about' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">เกี่ยวกับ</a>
       </div>
   
       <!-- เมนูสำหรับหน้าจอขนาดเล็ก -->
