--- a/prediction/templates/prediction/result.html
+++ b/prediction/templates/prediction/result.html
@@ -1,7 +1,7 @@
-{% extends 'main/base.html' %}
+{% extends 'main/home.html' %}
 
 {% block content %}
-<div class="bg-gray-200 p-8 mt-28">
+<div class=" p-8 mt-28">
     <div class="max-w-md mx-auto bg-white p-6 rounded-md shadow-md">
         <h2 class="text-2xl font-semibold mb-4 text-center">ประวัติการทำนายของคุณ</h2>
 
