--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -95,30 +95,22 @@
 
   <div class="relative w-full flex flex-col h-screen overflow-y-hidden ">
     <!-- Desktop Header -->
-    <header class="w-full items-center bg-white py-2 px-6 hidden sm:flex">
-      <div class="w-1/2"></div>
-      <div x-data="{ isOpen: false }" class="relative w-1/2 flex justify-end">
-        <button @click="isOpen = !isOpen"
-          class="realtive z-10 w-12 h-12 rounded-full overflow-hidden border-4 border-gray-400 hover:border-gray-300 focus:border-gray-300 focus:outline-none">
-          <img src="https://www.iconpacks.net/icons/2/free-user-icon-3297-thumb.png">
-        </button>
-        <button x-show="isOpen" @click="isOpen = false" class="h-full w-full fixed inset-0 cursor-default"></button>
+    <header class="w-full items-end bg-white py-2 px-6 hidden sm:flex">
+  <!-- เมนูสำหรับหน้าจอขนาดใหญ่ -->
+  <div class="hidden lg:flex space-x-4 ml-auto">
+    {% if user.is_authenticated %}
+    <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">{{ user.username }}</a>
+    <a href="/logout/" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">ออกจากระบบ</a>
+    {% else %}
+    <a href="{% url 'login' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">เข้าสู่ระบบ</a>
+    <a href="{% url 'register' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">สมัครสมาชิก</a>
+    {% endif %}
+    <a href="{% url 'home' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">หน้าแรก</a>
+    <a href="{% url 'help' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">ช่วยเหลือ</a>
+    <a href="{% url 'about' %}" class="block px-4 py-2 account-link hover:bg-green-600 hover:text-white">เกี่ยวกับ</a>
+  </div>
+</header>
 
-        <div x-show="isOpen" class="absolute w-32 bg-white rounded-lg shadow-lg py-2 mt-16">
-          {% if user.is_authenticated %}
-          <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link hover:text-white">{{ user.username }}</a>
-          <a href="/logout/" class="block px-4 py-2 account-link hover:text-white">ออกจากระบบ</a>
-          {% else %}
-          <a href="{% url 'login' %}" class="block px-4 py-2 account-link hover:text-white">เข้าสู่ระบบ</a>
-          <a href="{% url 'register' %}" class="block px-4 py-2 account-link hover:text-white">สมัครสมาชิก</a>
-          {% endif %}
-          <a href="{% url 'home' %}" class="block px-4 py-2 account-link hover:text-white">หน้าแรก</a>
-          <a href="{% url 'help' %}" class="block px-4 py-2 account-link hover:text-white">ช่วยเหลือ</a>
-          <a href="{% url 'about' %}" class="block px-4 py-2 account-link hover:text-white">เกี่ยวกับ</a>
-        </div>
-      </div>
-
-    </header>
     <!-- Mobile Header & Nav -->
     <header x-data="{ isOpen: false }" class="w-full bg-green-500 py-5 px-6 sm:hidden">
       <div class="flex items-center justify-between">
@@ -134,9 +126,9 @@
       <!-- Dropdown Nav -->
       <nav :class="isOpen ? 'flex': 'hidden'" class="flex flex-col pt-4">
         {% if user.is_authenticated %}
-        <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link text-white opacity-75">{{ user.username }}</a>
-        <a href="/logout/"
-          class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
+        <a href="{% url 'dashboard' %}" class="block px-4 py-2 account-link text-white opacity-75">{{ user.username
+          }}</a>
+        <a href="/logout/" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
           ออกจากระบบ
         </a>
 
@@ -167,18 +159,20 @@
     </header>
     {% block content %}
 
-    
+
     <div class="text-4xl text-green-900 text-center font-bold mt-20 md:text-8xl lg:w-full ">
       <div>FARMER SUPPORT</div>
 
     </div>
     <div class=" grid justify-center mt-16 lg:hidden  ">
-      <a href="{% url 'advice' %}" class="flex items-center text-white opacity-80 hover:opacity-100 py-3 px-10 pl-6 nav-item bg-green-700 rounded-lg mb-5  ">
+      <a href="{% url 'advice' %}"
+        class="flex items-center text-white opacity-80 hover:opacity-100 py-3 px-10 pl-6 nav-item bg-green-700 rounded-lg mb-5  ">
         <i class="fas fa-tachometer-alt mr-3"></i>
         เช่าอุปกรณ์
       </a>
 
-      <a href="{% url 'index' %}" class="flex items-center text-white opacity-80 hover:opacity-100 py-3 px-10 pl-6 nav-item bg-green-700 rounded-lg">
+      <a href="{% url 'index' %}"
+        class="flex items-center text-white opacity-80 hover:opacity-100 py-3 px-10 pl-6 nav-item bg-green-700 rounded-lg">
         <i class="fas fa-align-left mr-3"></i>
         ทำนายพืช
       </a>
