--- a/prediction/templates/prediction/finish.html
+++ b/prediction/templates/prediction/finish.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/home.html' %}
 
 {% block content %}
 <div class="bg-gray-100 h-screen flex items-center justify-center">
