--- a/main/templates/main/help.html
+++ b/main/templates/main/help.html
@@ -1,38 +1,20 @@
 {% extends 'main/home.html' %}
 
+{% block content %}
 
-{% block content %} 
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
+<div class="min-h-screen flex items-center justify-center bg-cover bg-center"
+    style="background-image: url('https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg'); background-size: cover; background-position: center;">
 
-    body {
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: cover;
-        background-position: top;
-        background-image: url(https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg);
-        width: 100%;
-        height: 100%;
-        font-family: Arial, Helvetica, sans-serif;
-        letter-spacing: 0.02em;
-        font-weight: 400;
-    }
-</style>
-
-<div class="min-h-screen flex justify-center items-center">
-    <div class="bg-gray-300 p-6 rounded-lg shadow-lg">
+    <div class="flex flex-col justify-center p-6 rounded-lg shadow-lg border w-72 bg-gray-300">
         <div class="flex justify-center">
-            <input type="button" style="width: 200px; height: 50px;" value="ศูนย์ช่วยเหลือ" class="bg-blue-500 text-white px-4 py-2 rounded-lg">
+            <input type="button" value="ศูนย์ช่วยเหลือ" class="bg-blue-500 text-white px-4 py-2 rounded-lg w-52 h-12">
         </div>
         <div class="flex justify-center mt-4">
             <form action="{% url 'contact' %}">
-                <button type="submit" style="width: 200px; height: 50px;" class="bg-blue-500 text-white px-4 py-2 rounded-lg">ติดต่อเรา</button>
+                <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-lg w-52 h-12">ติดต่อเรา</button>
             </form>
         </div>
     </div>
 </div>
 
-{% endblock %} 
+{% endblock %}
