--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -44,7 +44,7 @@
   </style>
 </head>
 
-<body class="bg-gray-100 font-family-karla flex"
+<div class="min-h-screen flex items-center justify-center bg-cover bg-center"
   style="background-image: url('https://cdn.pixabay.com/photo/2019/04/29/07/46/rice-cultivation-4165415_1280.jpg'); background-size: cover; background-position: center;">
 
 
