--- a/prediction/templates/prediction/predict.html
+++ b/prediction/templates/prediction/predict.html
@@ -6,7 +6,7 @@
   <title>Data Input Form</title>
   
 </head>
-{% extends 'main/home.html' %}
+{% extends 'main/base.html' %}
 {% load static %}
 
 {% block content %}
