--- a/main/templates/main/reset_password_confirm.html
+++ b/main/templates/main/reset_password_confirm.html
@@ -11,23 +11,32 @@
             <div class="flex flex-col items-center  ">
                 <span class="w-24 h-24 mt-4 bg-cover rounded-full"
                     style="background-image: url(https://cdn.pixabay.com/photo/2016/11/14/04/17/buffalo-1822574_1280.jpg); "></span>
-                    <div class="mt-8 text-white text-xl mb-4">ตั้งรหัสผ่านใหม่</div>
+
+                {% if validlink %}
+                <div class="mt-8 text-white text-xl mb-4">ตั้งรหัสผ่านใหม่</div>
                 <div class="text-white p-4 ">
                     <form class="max-w-sm mx-auto" action="" method="post" enctype="multipart/form-data">
 
                         {% csrf_token %}
                         <!-- {{ form|crispy }} -->
                         {{ form.as_p }}
-                        
+
                         <div class="text-center mt-8 mb-8">
                             <button type="submit"
                                 class="w-auto px-4 py-2 flex justify-center text-white bg-blue-500 rounded hover:bg-blue-700 mx-auto">บันทึกรหัสผ่าน</button>
                         </div>
                     </form>
-                    <div class="m-2">
-                        <div class="max-w-sm mx-auto">
                     
-                        </div>
+                    {% else %}
+
+                    <div class="pb-10 flex flex-col items-center  ">
+                       <div class="mt-8 text-white text-xl mb-4">ลิ้งค์ใช้ไม่ได้</div>
+                        <p class="text-white">ลิ้งค์หมดอายุหรือเคยใช้ไปแล้ว</p>
+                        <a href="{% url 'home' %}" class="block mt-10 px-4 py-2 account-lin bg-gray-500 text-white underline-link">กลับไปหน้าแรก</a>
+
+                    </div>
+                    
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -57,4 +66,3 @@
 
     </div>
 </div> -->
-
