--- a/shop/templates/shop/show_product.html
+++ b/shop/templates/shop/show_product.html
@@ -78,7 +78,6 @@
     }
 </script>
 
-
 <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 m-2 col-start-2 h-full lg:py-10 lg:px-10">
     {% for i in allproduct %}
     {% if i.quantity > 0 %}
@@ -98,7 +97,7 @@
                     {% endif %}
                 </h5>
                 <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
-                <p class="text-gray-800 truncate">สถานะอุปกรณ์: {{ i.product_status }}</p>
+                <p class="text-gray-800 truncate">สถานะอุปกรณ์: {% if i.id in expired_products %}ไม่พร้อมเช่า{% else %}{{ i.product_status }}{% endif %}</p>
                 <p class="text-gray-800 truncate">ที่อยู่อุปกรณ์: {{ i.product_location }} {{ i.province }}</p>
                 <p class="text-gray-800 truncate">จำนวน: {{ i.quantity }} ชิ้น</p>
             </div>
@@ -117,10 +116,10 @@
                 <span class="text-red-500">No ID available for this product</span>
                 {% endif %}
             </h5>
-            <p class="text-gray-300 truncate">ราคา: {{ i.product_price }}</p>
-            <p class="text-gray-300 truncate">สถานะอุปกรณ์: หมด</p>
-            <p class="text-gray-300 truncate">ที่อยู่อุปกรณ์: {{ i.product_location }} {{ i.province }}</p>
-            <p class="text-gray-300 truncate">จำนวน: {{ i.quantity }} ชิ้น</p>
+            <p class="text-gray-800 truncate">ราคา: {{ i.product_price }}</p>
+            <p class="text-gray-800 truncate">สถานะอุปกรณ์: ไม่พร้อมเช่า</p>
+            <p class="text-gray-800 truncate">ที่อยู่อุปกรณ์: {{ i.product_location }} {{ i.province }}</p>
+            <p class="text-gray-800 truncate">จำนวน: {{ i.quantity }} ชิ้น</p>
         </div>
     </div>
     {% endif %}
