--- a/shop/templates/shop/showdetall_product.html
+++ b/shop/templates/shop/showdetall_product.html
@@ -42,7 +42,7 @@
             </div>
 
             <div>
-                <p class="text-lg font-semibold">ราคา: {{ product.product_price }} บาท</p>
+                <p class="text-lg font-semibold">ราคา: {{ product.product_price }} บาท/วัน</p>
             </div>
         </div>
 
