--- a/user/templates/users/See_rentals_product.html
+++ b/user/templates/users/See_rentals_product.html
@@ -49,7 +49,7 @@
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                 <td class="px-4 lg:px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ i.user}}</td>
                 <td class="px-4 lg:px-6 py-4">{{user.product.product_name}}</td>
-                <td class="px-4 lg:px-6 py-4">{{ user.product.datetime }}</td>
+                <td class="px-4 lg:px-6 py-4">{{ user.sell_date|date:"d M Y H:i:s" }}</td>
                 <td class="px-4 lg:px-6 py-4">{{ user.product.product_price|intcomma }}</td>
             </tr>
             {% endfor %}
