--- a/user/templates/users/add_profile.html
+++ b/user/templates/users/add_profile.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+<!-- {% extends 'main/base.html' %}
 
 
 {% block content %}
@@ -25,10 +25,7 @@
                         <label for="user_1" class="text-lg font-medium mb-2 text-white">นามสกุล:</label>
                         <input type="text" id="user_1" name="last_name" value="{{user.last_name}}" class="form-input bg-gray-100 h-10 rounded-md">
                     </div>
-                    <!-- <div class="flex flex-col">
-                        <label for="user_2" class="text-lg font-medium mb-2 text-white">นามสกุล:</label>
-                        <input type="text" id="user_2" name="phon_number" value="{{ user.Profile.first.phon_numbers }}" class="form-input bg-gray-100 h-10 rounded-md">
-                    </div> -->
+                    
                     <div class="flex flex-col">
                         <label for="email_1" class="text-lg font-medium mb-2 text-white">อีเมล:</label>
                         <input type="text" id="email_1" name="email" value="{{ user.email }}" class="form-input bg-gray-100 h-10 rounded-md">
@@ -58,4 +55,4 @@
 
 
 
-{% endblock %}
+{% endblock %} -->
